<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/about_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#207F7F7F"
    android:clickable="true" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_launcher" />
        
    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textColor="#AA66CC"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="#808080"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/app_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_version"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="#AA66CC"
        android:textSize="16sp"
        android:text="@string/about_app" />
    
     <TextView
         android:id="@+id/about"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="20dp"
         android:textColor="#808080"
         android:textSize="16sp"
         android:text="@string/about_sfox_studio" />

</RelativeLayout>
